--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.0",
     "@tanstack/react-query": "^4.29.12",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
@@ -24,7 +25,8 @@
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.11",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "tailwindcss-dark-mode": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
